# custdevai

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_consents.py  0003_add_campaign_analysis_fields.py  0004_add_reports_table.py  0005_add_pg_trgm_index_on_answers.py
apps/api/: cli.py  config.py  deps.py  errors.py  main.py  middleware.py
apps/api/auth/: __init__.py  bruteforce.py  email.py  hashing.py  jwt.py  passwords.py  rbac.py  redis_client.py  router.py  schemas.py  service.py
apps/api/db/: base.py  session.py
apps/api/db/models/: __init__.py  analysis.py  audit.py  campaign.py  consent.py  report.py  script.py  session.py  user.py
apps/api/db/repositories/: campaign_analysis.py  campaigns.py  consents.py  ml_results.py  reports.py  scripts.py  sessions.py  users.py
apps/api/reports/: __init__.py  charts.py  data_loader.py  pseudonyms.py  service.py  storage.py
apps/api/reports/fonts/: README.md
apps/api/reports/generators/: __init__.py  pdf.py  xlsx.py
apps/api/routers/: admin.py  campaigns.py  health.py  reports.py  scripts.py  transcripts.py  users.py  webhook.py
apps/api/schemas/: campaign.py  pagination.py  problem.py  report.py  script.py  transcripts.py  user.py
apps/api/services/: audit.py  campaigns.py  data_deletion.py  scripts.py  users.py
apps/bot/: db.py  deeplink.py  dispatcher.py  keyboards.py  main.py  messages.py  states.py
apps/bot/handlers/: __init__.py  consent.py  interview.py  reject.py  start.py
apps/bot/services/: __init__.py  consent_service.py  interview_service.py  notify_service.py  session_service.py
apps/ml/: __init__.py  base.py  language.py  seeds.py
apps/ml/sentiment/: __init__.py  analyzer.py  schemas.py  training.py
apps/ml/topics/: __init__.py  modeler.py  postprocessor.py  schemas.py
apps/web/: .env.example  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: campaigns.ts  client.ts  scripts.ts  types.ts  users.ts
apps/web/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
apps/web/src/components/: Layout.tsx  SentimentTab.tsx  StatusBadge.tsx  TranscriptsTab.tsx
apps/web/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Spinner.tsx  Textarea.tsx
apps/web/src/lib/locales/: ru.ts
apps/web/src/pages/: ArchivePage.tsx  CampaignComparePage.tsx  CampaignCreatePage.tsx  CampaignDetailPage.tsx  CampaignsListPage.tsx  DashboardPage.tsx  LoginPage.tsx  ReportsPage.tsx  ScriptBuilderPage.tsx  ScriptsListPage.tsx  SettingsPage.tsx  WizardPage.tsx
apps/worker/: celery_app.py  main.py
apps/worker/tasks/: __init__.py  backup.py  ml_pipeline.py  sessions.py
docker/: api.Dockerfile  bot.Dockerfile  web.Dockerfile  worker.Dockerfile
docker/nginx/: nginx.conf
docs/: 00_thesis_assignment.md  01_theoretical_chapter.md  02_analytical_chapter.md  03_requirements_specification.md  ARCHITECTURE.md  BROWSER_QA_REPORT.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  LOAD_TEST_REPORT.md  ML_METRICS.md  PRE_DEFENSE_RUNBOOK.md
scripts/: worker-run.sh
scripts/db/init/: 00_extensions.sql
tests/: conftest.py
tests/e2e/: .gitignore  README.md  full_flow.spec.ts  package.json  playwright.config.ts
tests/integration/: conftest.py  test_auth_flow.py  test_bot_flow.py  test_campaigns_crud.py  test_data_deletion.py  test_health.py  test_ml_pipeline.py  test_openapi_protection.py  test_problem_details_format.py  test_rbac_enforcement.py  test_scripts_crud.py  test_sessions_sweeper.py  test_transcripts_api.py
tests/load/: README.md  _helpers.py  scenario_1_bot_webhook.js  scenario_2_ml_analyze.py  scenario_3_report_500.py  scenario_4_api_read.js
tests/ml/: test_sentiment_quality.py
tests/ml/data/: README.md  sentiment_fallback_holdout.json
tests/unit/: test_backup_rotation.py  test_bot_messages.py  test_bot_states.py  test_bruteforce.py  test_deeplink.py  test_email_notifier.py  test_hashing.py  test_jwt.py  test_language_detector.py  test_long_answer_buffer.py  test_ml_seeds.py  test_pagination.py  test_passwords.py  test_problem_details.py  test_pseudonyms.py  test_rbac.py  test_report_generators.py  test_settings.py  test_storage_backend.py  test_topic_postprocessor.py
